# building-height-estimation

./: .gitignore  pyproject.toml
core/: main.py
core/clients/: base.py  bing.py
core/models/: __init__.py  building.py  context.py  state.py  step.py  tile.py
core/services/: geometry.py  image.py
src/: settings.py
src/cli/: main.py
src/core/client/: base.py  bing.py  virtual_earth.py
src/core/clients/: __init__.py  base.py  bing.py
src/core/dto/: virtual_earth.py
src/core/model/: __init__.py  aoi.py  envelope.py  feature_class.py  mask.py  mosaic.py  tile.py
src/core/models/: mosaic.py
src/core/repository/: aoi.py  mosaic.py
src/core/service/: geometry.py  image.py  mosaic.py  shadow.py
src/core/services/: geometry.py  image.py
tests/: test.qgz
