[tool.poetry]
name = "building-height-estimation"
version = "0.1.0"
description = "Scripts to estimate building height using high-resolution satellite imagery."
authors = ["João Victor Teófilo Salgado"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gdal = "3.4.1"
pyquadkey2 = "^0.2.2"
pillow = "^10.1.0"
uplink = "^0.9.7"
setuptools = "^69.0.2"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
click = "^8.1.7"
rasterio = "^1.3.9"
numpy = "^1.26.2"
pandas = "^2.1.3"
scikit-image = "^0.22.0"
scikit-learn = "^1.3.2"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
